--- a/Product Landing Page.css
+++ b/Product Landing Page.css
@@ -1,8 +1,13 @@
 @import 'https://fonts.googleapis.com/css?family=Lato:400,700';
 
+:root {
+    --blue-color: #0072ffd1;
+    --blue-color-hover: #2b8affd1;
+}
+
 body {
     margin: 0;
-    background-color: #eee;
+    background-color: #afafaf;
     font-family: 'Lato', sans-serif;
     font-size: 18px;
 }
@@ -95,18 +100,43 @@ nav a {
     align-items: center;
     text-align: center;
     height: 200px;
-    margin-top: 50px;
+    margin-top: 70px;
 }
 
 #form-section h2 {
-    word-wrap: break-word;
     margin-bottom: 15px;
     font-size: 1.5em;
+}
+
+#description {
+    margin-bottom: 20px;
+    font-size: 0.99em;
+    font-weight: 600;
+}
+
+#signup {
+    margin-bottom: 7px;
+    font-weight: 100;
 }
 
 @media (max-width: 700px) {
     #form-section {
         margin-top: 150px;
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 600px) {
+    #form-section {
+        margin-top: 210px;
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 385px) {
+    #form-section {
+        margin-top: 225px;
+        margin-bottom: 60px;
     }
 }
 
@@ -116,6 +146,7 @@ nav a {
     padding: 5px;
     border-radius: 3px;
     border: 0;
+    margin-top: 5px;
 }
 
 #submit {
@@ -123,7 +154,7 @@ nav a {
     max-width: 150px;
     height: 30px;
     margin-top: 10px;
-    background-color: rgb(255, 196, 0);
+    background-color: var(--blue-color);
     border: 0;
     border-radius: 3px;
     font-family: inherit;
@@ -140,7 +171,7 @@ nav a {
 
 @keyframes hover-color-change {
     100% {
-    background-color:rgb(255, 174, 0);
+    background-color:var(--blue-color-hover);
     }
 }
 
@@ -157,7 +188,7 @@ nav a {
 }
 
 .icon {
-    color: rgb(255, 140, 0);
+    color: var(--blue-color);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -264,7 +295,7 @@ ol {
 }
 
 button[type='button'] {
-    background-color: rgb(255, 187, 0);
+    background-color: var(--blue-color);
     border: 0;
     border-radius: 2px;
     margin: 10px;
